--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recoil": "^0.7.6",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
@@ -23,5 +25,6 @@
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
-  }
+  },
+  "module": "es2022"
 }
