--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.6",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "zustand": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
