--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.0.0",
+    "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.6",
@@ -18,13 +18,13 @@
   },
   "devDependencies": {
     "@types/node": "18.11.7",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
     "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "13.1.1",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
   },
   "module": "es2022"
