--- a/package.json
+++ b/package.json
@@ -4,28 +4,30 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "next build",
+    "build": "pnpm partytown && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "partytown": "partytown copylib public/~partytown"
   },
   "dependencies": {
+    "@builder.io/partytown": "^0.8.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.6",
-    "sharp": "^0.31.1",
+    "sharp": "^0.32.5",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@types/node": "18.11.7",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.26.0",
+    "@types/node": "^20.5.7",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.15",
+    "eslint": "8.47.0",
     "eslint-config-next": "13.1.1",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.4",
-    "typescript": "4.8.4"
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   },
   "module": "es2022"
 }
